# bazel-grpc-example

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  go.sum
api/echo/v1/: BUILD.bazel  echo_service.proto
api/svc/echod/cmd/: BUILD.bazel
scripts/: proto.sh
svc/echo/: BUILD.bazel  api.go  echo_service.pb.go  echo_service.pb.validate.go
svc/echo/cmd/echocli/: BUILD.bazel  main.go
svc/echo/cmd/echod/: BUILD.bazel  main.go
