load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/svc/echo",
    visibility = ["//visibility:public"],
    deps = [
        "//api/echo/v1:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
