load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bazel_example_echo_v1_proto",
    srcs = ["echo_service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "bazel_example_echo_v1_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//:pgv_plugin_go",
    ],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/api/echo/v1",
    proto = ":bazel_example_echo_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_envoyproxy_protoc_gen_validate//validate:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",  #keep
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":bazel_example_echo_v1_go_proto"],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/api/echo/v1",
    visibility = ["//visibility:public"],
)
