load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/svc/echo/cmd/echocli",
    visibility = ["//visibility:private"],
    deps = [
        "//api/echo/v1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "echocli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
