load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/svc/echo/cmd/echod",
    visibility = ["//visibility:private"],
    deps = [
        "//api/echo/v1:go_default_library",
        "//svc/echo:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "echod",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/rmrobinson-textnow/bazel-grpc-example/svc/echo/cmd/echod",
    deps = [
        "//api/echo/v1:go_default_library",
        "//svc/echo:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
